# gameflix

./: .gitignore  CMakeLists.txt  README.md  install-deps.bash  make-and-run.bash  make-and-run.sh
.cache/clangd/index/: frame_combiner.cpp.1398BB2A22993580.idx  frame_combiner.hpp.CFABF40033DDEE85.idx  frame_extractor.cpp.78EB90A99704C3A4.idx  frame_extractor.hpp.BC72EBAC4DBA6299.idx  main.cpp.5C2CDF8A378B5CFF.idx
docs/: constructors
includes/frame/: combiner.cpp  combiner.hpp  extractor.cpp  extractor.hpp
src/: .aaa  .ooo  Gameflix.cpp  Gameflix.hpp  frame_combiner.cpp  frame_combiner.hpp  frame_extractor.cpp  frame_extractor.hpp  m  main.cpp  video.h
